--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-/* base styles */
+
 * {
   margin: 0;
   font-family: "Quicksand";
   color: #333;
 }
+
 .navbar {
+  width: 100%;
   padding: 20px;
-  width: 1200px;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
@@ -27,7 +28,7 @@
   color: #f1356d;
 }
 .content {
-  /* max-width: 1200px; */
+
   margin: 40px auto;
   padding: 20px;
 }
@@ -37,4 +38,11 @@
   font-size: 20px;
 }
 
+.card-portfolio {
+  width: 18rem
+}
+ */
 
+ * {
+  font-family: "Consolas";
+ }
