--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,43 @@
  * {
-  font-family: "Consolas";
+     font-family: "Consolas";
  }
+
+ .navbar {
+     background-color: #f1356d !important;
+ }
+
+ .nav-item {
+    margin-left: 40px !important;
+ }
+
+ .navbar-nav a {
+    font-size: 18px !important;
+    font-weight: 600 !important;
+ }
+
+ #navbarSupportedContent {
+     margin-left: 40px;
+ }
+
+ .hr {
+     width: 90% !important;
+ }
+
+ .card {
+     border-width: 4px !important;
+     border-radius: 10px !important;
+ }
+
+ .icon {
+    display: inline-block;
+    margin: 10px;
+    width: 32px; /* Adjust this width as needed */
+    height: 32px; /* Adjust this height as needed */
+    color: #f1356d;
+  }
+  
+  .icon svg {
+    width: 100%;
+    height: 100%;
+  }
+  
