--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,12 @@
  }
 
  .nav-item {
-    margin-left: 40px !important;
+     /* //margin-left: 40px !important; */
  }
 
  .navbar-nav a {
-    font-size: 18px !important;
-    font-weight: 600 !important;
+     font-size: 18px !important;
+     font-weight: 600 !important;
  }
 
  #navbarSupportedContent {
@@ -27,18 +27,86 @@
  .card {
      border-width: 4px !important;
      border-radius: 10px !important;
+     box-shadow: 7px 7px 3px #f1356d;
+ }
+ 
+ .card-image {
+    border: lightgray solid !important;
+    margin: 4px;
+    border-radius: 2px !important;
+    border-width: 2px !important;
+    min-height: 150px;
+}
+
+ .card-text {
+    font-size: 12px !important;
  }
 
  .icon {
+     display: inline-block;
+     margin: 10px;
+     width: 32px;
+     height: 32px;
+     color: #f1356d;
+ }
+
+ .icon svg {
+     width: 100%;
+     height: 100%;
+ }
+
+ .resume-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+  }
+  
+  .resume-section {
+    margin-bottom: 40px;
+  }
+  
+  .typing-effect {
     display: inline-block;
-    margin: 10px;
-    width: 32px; /* Adjust this width as needed */
-    height: 32px; /* Adjust this height as needed */
-    color: #f1356d;
+    border-right: 0.15em solid transparent;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 0.5s steps(30, end), blink-caret 0.5s step-end infinite;
   }
   
-  .icon svg {
-    width: 100%;
-    height: 100%;
+  .current-word {
+    border-color: black; /* Change the color for the current word */
   }
   
+  h1, h5 {
+    margin: 5px 0;
+  }
+  
+  ul {
+    margin: 0;
+    padding-left: 20px;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+    to {
+      width: 100%;
+    }
+  }
+  
+  @keyframes blink-caret {
+    from,
+    to {
+      border-color: transparent;
+    }
+    50% {
+      border-color: black;
+    }
+  }
+
+  .resume-section ul {
+    list-style: none; /* This removes the bullet points */
+    padding: 10; /* Removes default padding for list items */
+  }
