--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,32 @@
+* {
+    font-family: monospace, 'Courier New', Courier;
+    color: #282839;
+}
 
- * {
-     /* font-family: "Consolas"; */
-     font-family: monospace, 'Courier New', Courier;
- }
-
- .navbar {
-     /* background-color: #f1356d !important; */
- }
-
- .icon-words {
+.navbar {
     /* background-color: #f1356d !important; */
- }
- 
+}
+
+.nav-link {
+    color: #44435f !important;
+    position: relative;
+    text-decoration: none;
+    padding-bottom: 2px;
+    border-bottom: 2px solid transparent;
+    transition: all 0.3s ease;
+}
+
+.nav-link:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    border-bottom: 2px solid #8e8e9f;
+}
 
 
- .navbar-brand {
+.navbar-brand {
     font-weight: 700 !important;
     font-size: 48px !important;
     display: flex !important;
@@ -22,128 +34,117 @@
 }
 
 
- .icon-logo {
-     height: 60px;
-     width: 60px;
-     border-radius: 50%;
-
- }
-
- .nav-item {
-     /* background-color: #f1356d; */
- }
-
- #navbarSupportedContent {
-     /* background-color: #f1356d; */
- }
-
- .nav-item {
-     margin-left: 40px !important;
- }
-
- .nav-link {
-    color: #44435f !important;
+.icon-logo {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
 }
 
- .navbar-nav a {
-     font-size: 18px !important;
-     font-weight: 600 !important;
- }
+.nav-item {
+    margin-left: 40px !important;
+    font-weight: lighter;
+}
 
- #navbarSupportedContent {
-     /* margin-left: 40px; */
- }
+.nav-bar-container {
+    border-bottom: #282839 solid 3px;
+}
 
- .hr {
-     width: 90% !important;
- }
+.navbar-nav a {
+    font-size: 18px !important;
+    font-weight: 600 !important;
+}
 
- .card {
-     border-width: 4px !important;
-     border-radius: 10px !important;
-     box-shadow: 7px 7px 3px;
- }
+#navbarSupportedContent {
+    /* margin-left: 40px; */
+}
 
- .card-image {
-     border: lightgray solid !important;
-     margin: 4px;
-     border-radius: 2px !important;
-     border-width: 2px !important;
-     min-height: 150px;
- }
+.home-page-container {
+    width: 80% !important;
+}
 
- .card-text {
-     font-size: 12px !important;
- }
+.hr {
+    width: 90% !important;
+}
 
- .icon {
-     display: inline-block;
-     margin: 10px;
-     width: 32px;
-     height: 32px;
-     color: black;
- }
+.card {
+    border-width: 4px !important;
+    border-radius: 10px !important;
+    box-shadow: 7px 7px 3px;
+}
 
- .icon svg {
-     width: 100%;
-     height: 100%;
- }
+.card-image {
+    border: lightgray solid !important;
+    margin: 4px;
+    border-radius: 2px !important;
+    border-width: 2px !important;
+    min-height: 150px;
+}
 
- .resume-container {
-     max-width: 800px;
-     margin: 0 auto;
-     padding: 20px;
-     font-family: Arial, sans-serif;
- }
+.card-text {
+    font-size: 12px !important;
+}
 
- .resume-section {
-     margin-bottom: 40px;
- }
+.icon {
+    display: inline-block;
+    margin: 10px;
+    width: 32px;
+    height: 32px;
+    color: #36354c;
+}
+
+.icon svg {
+    width: 100%;
+    height: 100%;
+}
+
+.resume-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+}
+
+.resume-section {
+    margin-bottom: 40px;
+}
+
+.resume-section h5 {
+    font-weight: 400 !important;
+}
+
+h1,
+h5 {
+    margin: 5px 0;
+}
+
+ul {
+    margin: 0;
+    padding-left: 20px;
+}
 
 
- .current-word {
-     border-color: black;
-     /* Change the color for the current word */
- }
 
- .resume-section h5 {
-     font-weight: 400 !important;
- }
+.resume-section ul {
+    list-style: none;
+    /* This removes the bullet points */
+    padding: 10;
+    /* Removes default padding for list items */
+}
 
- h1,
- h5 {
-     margin: 5px 0;
- }
-
- ul {
-     margin: 0;
-     padding-left: 20px;
- }
-
-
-
- .resume-section ul {
-     list-style: none;
-     /* This removes the bullet points */
-     padding: 10;
-     /* Removes default padding for list items */
- }
-
- .btn-resume-skill {
-    border-color: #f67da1 !important;
+.btn-resume-skill {
     font-weight: 700 !important;
     border-width: 2px;
     width: 200px !important;
- }
+}
 
 
 
- .fa-brands {
-    color:  #f1356d !important; 
- }
+.fa-brands {
+    color: #282839 !important;
+}
 
 .devicon-icon {
-    color: #f1356d !important; 
+    color: #282839 !important;
 }
 
 .home-container {
@@ -152,11 +153,13 @@
 
 .home-img-row {
     height: 400px !important;
-  }
+}
 
 .home-img-1 {
-    width: 100%; /* takes the 100 % width of its container (.box div)*/
-    height: 100%; /* takes the 100 % height of its container (.box div)*/
+    width: 100%;
+    /* takes the 100 % width of its container (.box div)*/
+    height: 100%;
+    /* takes the 100 % height of its container (.box div)*/
 }
 
 .about-p {
@@ -164,14 +167,10 @@
 }
 
 .btn-about {
-    border-color: #f67da1 !important;
     font-weight: 700 !important;
-    border-width: 2px;
-    /* height: 40px !important; */
+    border-width: 3px;
 }
 
 .motto {
     font-family: Courier !important;
 }
-
-  
