--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,9 @@
 * {
     font-family: monospace, 'Courier New', Courier;
-    color: #282839;
-}
-
-.navbar {
-    /* background-color: #f1356d !important; */
-}
-
-.nav-link {
-    color: #44435f !important;
-    position: relative;
-    text-decoration: none;
-    padding-bottom: 2px;
-    border-bottom: 2px solid transparent;
-    transition: all 0.3s ease;
-}
-
-.nav-link:hover::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    width: 100%;
-    border-bottom: 2px solid #8e8e9f;
+    color: whitesmoke;
 }
 
 
-.navbar-brand {
-    font-weight: 700 !important;
-    font-size: 48px !important;
-    display: flex !important;
-    align-items: center !important;
-}
-
-
-.icon-logo {
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-}
-
-.nav-item {
-    margin-left: 40px !important;
-    font-weight: lighter;
-}
-
-.nav-bar-container {
-    border-bottom: #282839 solid 3px;
-}
-
-.navbar-nav a {
-    font-size: 18px !important;
-    font-weight: 600 !important;
-}
-
-#navbarSupportedContent {
-    /* margin-left: 40px; */
-}
-
-.home-page-container {
-    width: 80% !important;
-}
 
 .hr {
     width: 90% !important;
@@ -147,20 +90,7 @@ ul {
     color: #282839 !important;
 }
 
-.home-container {
-    width: 60%;
-}
 
-.home-img-row {
-    height: 400px !important;
-}
-
-.home-img-1 {
-    width: 100%;
-    /* takes the 100 % width of its container (.box div)*/
-    height: 100%;
-    /* takes the 100 % height of its container (.box div)*/
-}
 
 .about-p {
     line-height: 2 !important;
